--- a/index.html/about.html
+++ b/index.html/about.html
@@ -103,13 +103,13 @@
       <div class="section-center page-info">
         <!-- about page -->
         <p>
-          Hello, I am John Doe and I am a web developer. I live and work in
-          somewhere warm. I spend most of my day, experimenting with HTML, CSS
+          Hello, I am Keith Chad and I am an Android Developer and Web developer. I live in
+          Eldoret. I spend most of my day, experimenting with Java, Kotlin, HTML, CSS
           and JavaScript (and its endless list of frameworks). I enjoy coding
           and the challenge of learning something new everyday. You can also
-          find me at youtube channel
-          <a href="keithchad.github.io"
-            >coding addict</a
+          find me at my youtube channel.
+          <a href="https://www.youtube.com/channel/UCMbU7HgWX_LhF8mP6c4bwNw?view_as=subscriberhttps://www.youtube.com/channel/UCMbU7HgWX_LhF8mP6c4bwNw?view_as=subscriber"
+            >Modern Coding</a
           >
         </p>
       </div>
