--- a/index.html/index.html
+++ b/index.html/index.html
@@ -12,18 +12,6 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css" />
 
-    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "ac82d691-c099-445b-b0dd-1d849cdb5686",
-      notifyButton: {
-        enable: true,
-      },
-    });
-  });
-</script>
 
   </head>
   <body>
@@ -177,11 +165,7 @@
            I can also develop websites and use my coding skills to get a better Job.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quae,
-            eum maiores est enim earum fugiat aspernatur. Fuga qui iste amet
-            reiciendis possimus rerum omnis recusandae molestias error
-            consequuntur, doloribus inventore reprehenderit officiis. Dolore
-            aut, repellendus eius fugiat numquam cumque.
+          
           </p>
           <a href="about.html" class="btn">more about me</a>
         </article>
@@ -215,9 +199,7 @@
           <h4>web Development</h4>
           <div class="underline"></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            corrupti animi saepe quasi excepturi cupiditate voluptate dolor sed
-            obcaecati vero.
+           Web Development is very awesome.
           </p>
         </article>
         <!-- end of single service -->
@@ -227,9 +209,7 @@
           <h4>Web design</h4>
           <div class="underline"></div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            corrupti animi saepe quasi excepturi cupiditate voluptate dolor sed
-            obcaecati vero.
+            Web design is very awesome.Imagine all your imaginations in a website form!
           </p>
         </article>
         <!-- end of single service -->
@@ -332,11 +312,9 @@
         </div>
         <!--end of section title -->
         <p class="video-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ratione
-          perferendis exercitationem sit. Beatae eius commodi officiis rem
-          soluta ratione dignissimos quisquam tempore laudantium, porro vitae
-          cupiditate dicta magni quas corrupti aperiam, rerum minus odio totam
-          repellendus delectus nostrum veniam!
+          If you want to ask me anything on either Android Development or Web Development 
+          you can feel free to cantact me by just pressing the button below even if you want
+           to ask for some advice you can also feel free to contact me.
         </p>
         <a href="contact.html" class="btn">contact me</a>
       </div>
@@ -485,7 +463,7 @@
               This is where i met my Mentor(Juma Allan-Android Engeineer).
               Here is where i decided i would become an Android Developer
               I honestly didnt know where to start from.I did my research 
-              and decided to start learning  Java Language.
+              and decided to start learning  Java Programming Language.
           </p>
           <span class="number">
             4
@@ -508,11 +486,12 @@
         <!-- end of  single timeline item -->
         <!-- single timeline item -->
         <article class="timeline-item">
-          <h4>2015</h4>
+          <h4>2020</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-            consequuntur voluptates tempore numquam? Quidem incidunt fugit quasi
-            autem, ea excepturi.
+            But because i was strong, I didnt give up and i decided to
+             get into Android App Development first then i got into Front 
+             End Web Development.Since I got into both, I have always 
+             enjoyed doing them.
           </p>
           <span class="number">
             6
@@ -586,8 +565,8 @@
               <h4>Google further Opens Maps To Developers.</h4>
               <p>
                Google has increased the access developers have to Maps, 
-                providing the ability to build things such as games which offer alternative versions of the real world.
-                The most obvious example of such a game is Niantic's Pokemon Go.
+                providing the ability to build things such as games which offer
+                 alternative versions of the real world.
               </p>
               <div class="card-footer">
                 <img src="./images/hero-img-small.jpg" alt="author image" />
