--- a/index.html/index.html
+++ b/index.html/index.html
@@ -14,7 +14,17 @@
 
 
   </head>
+  
   <body>
+
+    <!-- Loader -->
+<div id="page-loader" >
+  <svg class="loader" width="32px" height="32px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><circle class="circle" fill="none" stroke-width="2" stroke-linecap="round" cx="16" cy="16" r="14"></circle></svg>
+  <span class="loading-txt text-muted">Wait for some magic...</span>
+</div>
+<!-- Loader / End -->
+
+<!-- Header -->
     <!-- navbar -->
     <nav class="nav" id="nav">
       <div class="nav-center">
@@ -102,7 +112,7 @@
         <article class="hero-info">
           <div class="underline"></div>
           <h1>i'm Chad</h1>
-          <h4>Android Developer and Web Developer.</h4>
+          <h2 class="caption text-primary"><span id="role">Software engineer</span></h2>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
           <ul class="social-icons">
@@ -640,6 +650,9 @@
 
       <p>&copy; <span id="date"></span> Keith Chad. all rights reserved</p>
     </footer>
+
     <script src="./js/app.js"></script>
+    <script src="./js/typed.js"></script>
+
   </body>
 </html>
