--- a/index.html/index.html
+++ b/index.html/index.html
@@ -16,7 +16,7 @@
   </head>
   
   <body>
-    
+
 
 <!-- Header -->
     <!-- navbar -->
@@ -647,6 +647,10 @@
 
     <script src="./js/app.js"></script>
     <script src="./js/typed.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+
 
   </body>
 </html>
