--- a/index.html/contact.html
+++ b/index.html/contact.html
@@ -181,5 +181,9 @@
       <p>&copy; <span id="date"></span> Keith Chad. All rights reserved.</p>
     </footer>
     <script src="./js/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+    
   </body>
 </html>
