--- a/index.html/index.html
+++ b/index.html/index.html
@@ -12,6 +12,18 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css" />
 
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "de0cd5c1-d981-4336-9880-299fd99db7aa",
+      notifyButton: {
+        enable: true,
+      },
+    });
+  });
+</script>
 
   </head>
   
