--- a/index.html/index.html
+++ b/index.html/index.html
@@ -28,8 +28,11 @@
   </head>
   
   <body>
+<!--Loader Start-->
 
-
+<div class="loader-bg">
+  
+</div>
 <!-- Header -->
     <!-- navbar -->
     <nav class="nav" id="nav">
