--- a/index.html/index.html
+++ b/index.html/index.html
@@ -30,9 +30,10 @@
   <body>
 <!--Loader Start-->
 
-<div class="loader-bg">
-  
-</div>
+<div class="loader-bg"></div>
+
+<!--Loader End-->
+
 <!-- Header -->
     <!-- navbar -->
     <nav class="nav" id="nav">
