--- a/index.html/index.html
+++ b/index.html/index.html
@@ -28,11 +28,7 @@
   </head>
   
   <body>
-<!--Loader Start-->
 
-<div class="loader-bg"></div>
-
-<!--Loader End-->
 
 <!-- Header -->
     <!-- navbar -->
@@ -116,6 +112,13 @@
       </div>
     </aside>
     <!-- end of sidebar -->
+    <!--Loader Start-->
+
+<div class="loader-bg">
+  <div class="loader"></div>
+</div>
+
+<!--Loader End-->
     <!-- header -->
     <header class="hero">
       <div class="section-center hero-center">
