--- a/index.html/index.html
+++ b/index.html/index.html
@@ -125,8 +125,8 @@
       <div class="section-center hero-center">
         <article class="hero-info">
           <div class="underline"></div>
-          <h1>i'm Chad</h1>
-          <h2 class="caption text-primary"><span id="role">Software engineer</span></h2>
+          <h1>i'm chad</h1>
+              <h3 >I am <span class="typing"></span></h3>
           <a href="contact.html" class="btn hero-btn">hire me</a>
           <!-- social icons -->
           <ul class="social-icons">
@@ -666,16 +666,27 @@
     </footer>
 
     <script src="./js/app.js"></script>
-    <script src="./js/typed.js"></script>
+    <script src="typed.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      var typed = new Typed('.typing', {
+        strings: ["a Android Developer.", "a Web Developer.", "a Youtuber."],
+        loop:true,
+        typeSpeed: 30,
+        backSpeed: 3,
+        backDelay:1000,
+      });
+</script>
     <script>
       setTimeout(function() {
         $('.spinner-wrapper').fadeToggle();
       }, 1500);
     </script>
+
+    
 
 
   </body>
