type anim commit

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -673,7 +673,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript">
       var typed = new Typed('.typing', {
-        strings: ["a Android Developer.", "a Web Developer.", "a Youtuber."],
+        strings: ["an Android Developer.", "a Web Developer.", "a Youtuber."],
         loop:true,
         typeSpeed: 30,
         backSpeed: 3,
