--- a/index.html/contact.html
+++ b/index.html/contact.html
@@ -13,6 +13,12 @@
   </head>
 
   <body>
+    <div class="loader">
+      <span></span> 
+      <span></span>    
+      <span></span>    
+   
+    </div>
     <!-- navbar -->
     <nav class="nav" id="nav">
       <div class="nav-center">
