--- a/index.html/index.html
+++ b/index.html/index.html
@@ -44,7 +44,7 @@
       <div class="nav-center">
         <!-- nav header -->
         <div class="nav-header">
-          <img src="./images/.svg" class="nav-logo" alt="" />
+          <img src="./images/logo.png" class="nav-logo" alt="" />
           <button class="nav-btn" id="nav-btn">
             <i class="fas fa-bars"></i>
           </button>
