--- a/index.html/index.html
+++ b/index.html/index.html
@@ -38,6 +38,14 @@
 </div>
 <!-- end of preloader -->
 
+<!-- Preloader2 -->
+<div class="loader">
+<span></span>
+<span></span>
+<span></span>
+
+</div>
+<!-- end of preloader -->
 
 
 
