--- a/index.html/contact.html
+++ b/index.html/contact.html
@@ -13,12 +13,17 @@
   </head>
 
   <body>
-    <div class="loader">
-      <span></span> 
-      <span></span>    
-      <span></span>    
-   
-    </div>
+
+    <!-- Preloader -->
+<div class="spinner-wrapper">
+  <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+  </div>
+</div>
+<!-- end of preloader -->
+
     <!-- navbar -->
     <nav class="nav" id="nav">
       <div class="nav-center">
@@ -190,6 +195,13 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script>
+      setTimeout(function() {
+        $('.spinner-wrapper').fadeToggle();
+      }, 1500);
+    </script>
+
     
   </body>
 </html>
