--- a/index.html/about.html
+++ b/index.html/about.html
@@ -165,8 +165,8 @@
         <!-- end of single item -->
         <!-- single item -->
         <li>
-          <a href="https://github.com/keithchad" class="social-icon">
-            <i class="fab fa-github"></i>
+          <a href="https://www.youtube.com/channel/UCMbU7HgWX_LhF8mP6c4bwNw?view_as=subscriberhttps://www.youtube.com/channel/UCMbU7HgWX_LhF8mP6c4bwNw?view_as=subscriber" class="social-icon">
+            <i class="fab fa-youtube"></i>
           </a>
         </li>
         <!-- end of single item -->
