--- a/index.html/index.html
+++ b/index.html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keith Chad || Home</title>
+    <link rel="icon" href="tech.png">
     <!-- font-awesome reference -->
     <link
       rel="stylesheet"
