--- a/index.html/projects.html
+++ b/index.html/projects.html
@@ -11,7 +11,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-
+  <link rel="icon" href="./images/tech_point_logo.png">
   <body>
 
     <!-- Preloader -->
