privacy policy changes

--- a/index.html/app-privacy-policy-CR7.html
+++ b/index.html/app-privacy-policy-CR7.html
@@ -51,7 +51,8 @@
 <p>Google Play Services</p>
 <p>AdMob</p>
 <p>Firebase Analytics</p>
-<p>Log Data</p>
+
+<p><b><h4>Log Data</h4></b></p>
 
 <p>I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.</p>
 
@@ -63,33 +64,33 @@
 
 <p><b><h4>Service Providers</h4></b></p>
 
-I may employ third-party companies and individuals due to the following reasons:
+<p>I may employ third-party companies and individuals due to the following reasons:</p>
 
-To facilitate our Service;
-To provide the Service on our behalf;
-To perform Service-related services; or
-To assist us in analyzing how our Service is used.
-I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
+<p>To facilitate our Service;</p>
+<p>To provide the Service on our behalf;</p>
+<p>To perform Service-related services; or</p>
+<p>To assist us in analyzing how our Service is used.</p>
+<p>I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
 
-Security
+<p><b><h4>Security</h4></b></p>
 
-I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
+<p>I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.</p>
 
-Links to Other Sites
+<p><b><h4>Links to Other Sites</h4></b></p>
 
-This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
+<p>This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
 
-Children’s Privacy
+<p><b><h4>Children’s Privacy</h4></b></p>
 
-These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
+<p>These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.</p>
 
-Changes to This Privacy Policy
+<p><b><h4>Changes to This Privacy Policy</h4></b></p>
 
-I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
+<p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
 
-Contact Us
+<p><b><h4>Contact Us</h4></b></p>
 
-If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at hello@uigitdev.com.
+<p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at <b>techpoint170@gmail.com.</b></p>
         </p>
       </div>
     </section>
