privacy policy changes

--- a/index.html/app-privacy-policy-VRA.html
+++ b/index.html/app-privacy-policy-VRA.html
@@ -23,7 +23,7 @@
 
       
       <div class="section-title">
-        <h2>RONALDO QUIZ APP PRIVACY POLICY</h2>
+        <h2>VOICE RECORDING APP PRIVACY POLICY</h2>
         <div class="underline" ></div>
       </div>
       
@@ -31,8 +31,8 @@
       <div class="section-center page-info">
         <!-- about page -->
         <p>
-          <p><b><h3>PRIVACY POLICY OF RONALDO QUIZ APP</h3></b></p>
-<p>Keith Chad built the Ronaldo Quiz app as an Ad Supported app. This SERVICE is provided by Keith Chad at no cost and is intended for use as is.</p>
+          <p><b><h3>PRIVACY POLICY OF VOICE RECORDING APP</h3></b></p>
+<p>Keith Chad built the Voice Recording app as an Ad Supported app. This SERVICE is provided by Keith Chad at no cost and is intended for use as is.</p>
 
 <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
