--- a/index.html/index.html
+++ b/index.html/index.html
@@ -287,13 +287,13 @@
         <a href="projects.html" class="project-3">
           <article class="project">
             <img
-              src="./images/project-3.jpeg"
-              alt="single project"
+              src="./images/voice_recorder.png"
+              alt="voice Recorder"
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>Material Design Voice Recorder</h4>
+              <p>Keith Chad</p>
             </div>
           </article>
         </a>
@@ -301,13 +301,13 @@
         <a href="projects.html" class="project-4">
           <article class="project">
             <img
-              src="./images/project-4.jpeg"
-              alt="single project"
+              src="./images/project-4.jpg"
+              alt="instagram clone"
               class="project-img"
             />
             <div class="project-info">
-              <h4>project title</h4>
-              <p>client name</p>
+              <h4>Instagram Clone</h4>
+              <p>Keith Chad</p>
             </div>
           </article>
         </a>
