--- a/index.html/projects.html
+++ b/index.html/projects.html
@@ -115,17 +115,17 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/project-1.jpeg" alt="single project" />
+            <img src="./images/project-4.jpg" alt="instagram clone" />
             <a href="index.html" class="project-icon">
               <i class="fas fa-home"></i>
             </a>
           </div>
           <div class="project-details">
-            <h4>project name</h4>
+            <h4>Instagram Clone</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              eveniet amet odit aperiam, provident cum possimus sapiente minus
-              quos! Ipsum?
+              This is is an Instagram clone that I built using Firebase backend.
+              It has almost all the features of the Instagram Clone including Stories,Follow and Follower count and many more.
+              The source code for the Project will be available soon in my Github page.
             </p>
             <div class="project-footer">
               <span>
@@ -139,17 +139,16 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/project-1.jpeg" alt="single project" />
+            <img src="./images/voice_recorder.png" alt="voice recorder" />
             <a href="index.html" class="project-icon">
               <i class="fas fa-home"></i>
             </a>
           </div>
           <div class="project-details">
-            <h4>project name</h4>
+            <h4>Material Design Voice Recorder</h4>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
-              eveniet amet odit aperiam, provident cum possimus sapiente minus
-              quos! Ipsum?
+              Most of the UI of this Voice Recorder is built out of the Google Material Design Library.
+              The Application will be uploaded to Google Playstore for public use soon.
             </p>
             <div class="project-footer">
               <span>
