changes to contact form

--- a/index.html/contact.html
+++ b/index.html/contact.html
@@ -112,11 +112,11 @@
       <!--end of section title -->
       <div class="alert">Your message has been sent</div>
 
-      <div class="section-right page-info">
+      <div class="section-right page-info"></div>
         <!-- contact page-->
       
-          <form>
-            <div class="wrapper">
+        <form id="contactForm">
+        <div class="wrapper">
 
             <div class="input_field">
                 <input type="text" id="name" placeholder="Name" required name="name">
