--- a/web/projects.html
+++ b/web/projects.html
@@ -15,13 +15,13 @@
   <body>
 
     <!-- Preloader -->
-<div class="spinner-wrapper">
+<!-- <div class="spinner-wrapper">
   <div class="spinner">
       <div class="bounce1"></div>
       <div class="bounce2"></div>
       <div class="bounce3"></div>
   </div>
-</div>
+</div> -->
 <!-- end of preloader -->
 
     <!-- navbar -->
@@ -78,7 +78,7 @@
             </a>
           </li>
           <!-- end of single item -->
-          
+
           <!-- single item -->
           <li>
             <a href="https://github.com/keithchad" class="social-icon">
@@ -124,8 +124,32 @@
             <h4>Instagram Clone</h4>
             <p>
               This is is an Instagram clone that I built using Firebase backend.
-              It has almost all the features of the Instagram Clone including Stories,Follow and Follower count and many more.
-              The source code for the Project will be available soon in my Github page.
+              It has almost all the features of the original Instagram including Stories,Follow and Follower count and many more.
+              The source code for the Project will be available soon on my Github page.
+            </p>
+            <div class="project-footer">
+              <span>
+                <i class="fab fa-github"></i>
+              </span>
+              <a href="https://www.github.com">source code</a>
+            </div>
+          </div>
+        </article>
+        <!-- end of single project -->
+        <!-- single project -->
+        <article class="single-project">
+          <div class="project-container">
+            <img src="./images/project-1.png" alt="whatsapp clone" />
+            <a href="index.html" class="project-icon">
+              <i class="fas fa-home"></i>
+            </a>
+          </div>
+          <div class="project-details">
+            <h4>WhatsApp Clone</h4>
+            <p>
+              This is is a WhatsApp clone that I built using Firebase backend which is a NoSql database.
+              It has almost all the features of the original WhatsApp including Chats,Status and many more.
+              The source code for the Project will be available soon on my Github page.
             </p>
             <div class="project-footer">
               <span>
@@ -190,7 +214,7 @@
           </a>
         </li>
         <!-- end of single item -->
-        
+
         <!-- single item -->
         <li>
           <a href="https://github.com/keithchad" class="social-icon">
