--- a/web/app-privacy-policy/app-privacy-policy-SS.html
+++ b/web/app-privacy-policy/app-privacy-policy-SS.html
@@ -6,12 +6,12 @@
     <title>Google Play || Privacy Policy</title>
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+      href="../fontawesome-free-5.12.1-web/css/all.min.css"
     />
     <!-- css -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <link rel="icon" href="./images/tech_point_logo.png">
+  <link rel="icon" href="../images/tech_point_logo.png">
 <body>
     <!-- ############## -->
     <!-- ############## -->
@@ -23,7 +23,7 @@
 
       
       <div class="section-title">
-        <h2>RONALDO QUIZ APP PRIVACY POLICY</h2>
+        <h2>STATUS SAVER APP PRIVACY POLICY</h2>
         <div class="underline" ></div>
       </div>
       
@@ -31,8 +31,8 @@
       <div class="section-center page-info">
         <!-- about page -->
         <p>
-          <p><b><h3>PRIVACY POLICY OF RONALDO QUIZ APP</h3></b></p>
-<p>Keith Chad built the Ronaldo Quiz app as an Ad Supported app. This SERVICE is provided by Keith Chad at no cost and is intended for use as is.</p>
+          <p><b><h3>PRIVACY POLICY OF STATUS SAVER APP</h3></b></p>
+<p>Keith Chad built the Status Saver app as an Ad Supported app. This SERVICE is provided by Keith Chad at no cost and is intended for use as is.</p>
 
 <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</p>
 
@@ -144,6 +144,6 @@
 
       <p>&copy; <span id="date"></span> Tech Point. All rights reserved.</p>
     </footer>
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
