--- a/web/index.html
+++ b/web/index.html
@@ -29,13 +29,13 @@
   <link rel="icon" href="./images/tech_point_logo.png">
   <body>
 <!-- Preloader -->
-<!-- <div class="spinner-wrapper">
+<div class="spinner-wrapper">
   <div class="spinner">
       <div class="bounce1"></div>
       <div class="bounce2"></div>
       <div class="bounce3"></div>
   </div>
-</div> -->
+</div>
 <!-- end of preloader -->
 
 <!-- Header -->
@@ -522,7 +522,7 @@
              by innovating a cheap  Voice Controlled Robotic Hand which
               can be accesed by any one even those with low income.
               Later that year we got an award for being best exhibitors
-              in the lake region<strong> ADD</strong>
+              at the Lake Basin Innovation & Investments week in Kisumu.
               After this, I went for my first GDG which was held in Kisumu.
               This is where i met my Mentor(Juma Allan-Android Engeineer).
               Here is where i decided i would become an Android Developer
@@ -712,6 +712,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.0/firebase-database.js"></script>
     <script src="/__/firebase/init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script type="text/javascript">
       var typed = new Typed('.typing', {
         strings: ["an Android Developer.", "a Web Developer.", "a Youtuber."],
@@ -720,15 +721,13 @@
         backSpeed: 3,
         backDelay: 1000,
       });
-</script>
+    </script>
+
     <script>
       setTimeout(function() {
         $('.spinner-wrapper').fadeToggle();
       }, 1500);
     </script>
-
-
-
 
   </body>
 </html>
