--- a/web/app-privacy-policy/app-privacy-policy-VRA.html
+++ b/web/app-privacy-policy/app-privacy-policy-VRA.html
@@ -6,12 +6,12 @@
     <title>Google Play || Privacy Policy</title>
     <link
       rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
+      href="../fontawesome-free-5.12.1-web/css/all.min.css"
     />
     <!-- css -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
-  <link rel="icon" href="./images/tech_point_logo.png">
+  <link rel="icon" href="../images/tech_point_logo.png">
 <body>
     <!-- ############## -->
     <!-- ############## -->
@@ -144,6 +144,6 @@
 
       <p>&copy; <span id="date"></span> Tech Point. All rights reserved.</p>
     </footer>
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
   </body>
 </html>
