--- a/web/index.html
+++ b/web/index.html
@@ -471,7 +471,7 @@
         <article class="timeline-item">
           <h4>2003</h4>
           <p>
-            
+            Born to a wonderful woman by the name Emmy.
           </p>
           <span class="number">
             1
@@ -482,7 +482,7 @@
         <article class="timeline-item">
           <h4>2018</h4>
           <p>
-             
+             Got into Highschool where I got the chance to discover myself by try different new things.From drama to music to Tech.
           </p>
           <span class="number">
             2
